--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <p>请注意，使用破解软件可能违反软件的版权协议，并可能带来安全风险。我们不鼓励或支持任何非法行为，提供的资源仅供学习和研究之用，请在遵守当地法律法规的前提下使用。</p>
         </div>
         <div class="download-section">
-            <a href="/seckill-assistant-download" class="download-link">ppt下载</a>
-            <a href="/old-version-download" class="download-link">下载老版本（80%通杀）</a>
-            <a href="/new-version-download" class="download-link">下载新版本（目前仅适配极域）</a>
-            <a href="/small-script-download" class="download-link">小体积脚本(可调用)</a>
+            <a href="/元旦晚会.pptx" class="download-link">ppt下载</a>
+            <a href="/fhuaffgsdjj.exe" class="download-link">下载老版本（80%通杀）</a>
+            <a href="/fhuaffgfjf.exe" class="download-link">下载新版本（目前仅适配极域）</a>
+            <a href="/fdskjfd.exe" class="download-link">小体积脚本(可调用)</a>
         </div>
     </div>
 </body>
