--- a/index.html
+++ b/index.html
@@ -36,29 +36,35 @@
         }
         .download-link {
             display: block;
-            padding: 15px;
+            padding: 25px; /* 增加padding以增加间隔 */
             background-color: #007bff;
             color: white;
             text-decoration: none;
             text-align: center;
             border-radius: 5px;
-            margin-bottom: 15px;
+            margin-bottom: 30px; /* 增加margin-bottom以增加间隔 */
             transition: background-color 0.3s;
         }
         .download-link:hover {
             background-color: #0056b3;
         }
+        .logo {
+            width: 100px; /* 根据实际logo大小调整 */
+            height: auto;
+            display: block;
+            margin: 0 auto; /* 居中显示 */
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <img src="windows1.gif" alt="网页logo" class="logo"> <!-- 添加网页logo -->
         <h1>破解电子教室软件下载</h1>
         <div class="introduction">
-            <p>欢迎来到我们的下载站，这里提供多种电子教室软件的破解版本，包括秒杀小助手、老版本和新版本的适配软件，以及小体积脚本和思路合集。请根据您的需求选择合适的下载链接。</p>
+            <p>欢迎来到我们的下载站，这里提供多种电子教室软件的破解版本，包括老版本和新版本的适配软件，以及小体积脚本和思路合集。请根据您的需求选择合适的下载链接。</p>
             <p>请注意，使用破解软件可能违反软件的版权协议，并可能带来安全风险。我们不鼓励或支持任何非法行为，提供的资源仅供学习和研究之用，请在遵守当地法律法规的前提下使用。</p>
         </div>
         <div class="download-section">
-            <a href="https://wwil.lanzoul.com/iKFCy2jghicf" class="download-link">ppt下载</a>
             <a href="/fhuaffgsdjj.exe" class="download-link">下载老版本（80%通杀）</a>
             <a href="/fhuaffgfjf.exe" class="download-link">下载新版本（目前仅适配极域）</a>
             <a href="/fdskjfd.exe" class="download-link">小体积脚本(可调用)</a>
