--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>破解电子教室软件下载</title>
+    <link rel="shortcut icon" href="windows1.gif" type="image/gif">
     <style>
         body {
             font-family: 'Arial', sans-serif;
