--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
             display: block;
             margin: 0 auto; /* 居中显示 */
         }
+        .back-to-home {
+            display: block;
+            padding: 15px;
+            background-color: #6c757d;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 5px;
+            margin-top: 30px;
+            transition: background-color 0.3s;
+        }
+        .back-to-home:hover {
+            background-color: #5a6268;
+        }
     </style>
 </head>
 <body>
@@ -70,6 +84,7 @@
             <a href="/fhuaffgfjf.exe" class="download-link">下载新版本（目前仅适配极域）</a>
             <a href="/fdskjfd.exe" class="download-link">小体积脚本(可调用)</a>
         </div>
+        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a> <!-- 添加回到主页的链接 -->
     </div>
 </body>
 </html>
