--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>破解电子教室软件下载</title>
     <link rel="shortcut icon" href="windows1.gif" type="image/gif">
     <style>
+        body {<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>破解电子教室软件下载</title>
+    <link rel="shortcut icon" href="windows1.gif" type="image/gif">
+    <style>
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -37,23 +44,116 @@
         }
         .download-link {
             display: block;
-            padding: 25px; /* 增加padding以增加间隔 */
+            padding: 25px;
             background-color: #007bff;
             color: white;
             text-decoration: none;
             text-align: center;
             border-radius: 5px;
-            margin-bottom: 30px; /* 增加margin-bottom以增加间隔 */
+            margin-bottom: 30px;
             transition: background-color 0.3s;
         }
         .download-link:hover {
             background-color: #0056b3;
         }
         .logo {
-            width: 100px; /* 根据实际logo大小调整 */
+            width: 100px;
             height: auto;
             display: block;
-            margin: 0 auto; /* 居中显示 */
+            margin: 0 auto;
+        }
+        .back-to-home {
+            display: block;
+            padding: 15px;
+            background-color: #6c757d;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 5px;
+            margin-top: 30px;
+            transition: background-color 0.3s;
+        }
+        .back-to-home:hover {
+            background-color: #5a6268;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="windows1.gif" alt="网页logo" class="logo">
+        <h1>破解电子教室软件下载</h1>
+        <div class="introduction">
+            <p>欢迎来到我们的下载站，这里提供多种电子教室软件的破解版本，包括老版本和新版本的适配软件，以及小体积脚本和思路合集。请根据您的需求选择合适的下载链接。</p>
+            <p>请注意，使用破解软件可能违反软件的版权协议，并可能带来安全风险。我们不鼓励或支持任何非法行为，提供的资源仅供学习和研究之用，请在遵守当地法律法规的前提下使用。</p>
+        </div>
+        <div class="download-section">
+            <a href="#" id="download-link-1" class="download-link" onclick="showDisclaimer()">下载最新版本</a>
+            <a href="#" id="download-link-2" class="download-link" onclick="showDisclaimer()">小体积脚本(可调用)</a>
+        </div>
+        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a>
+    </div>
+
+    <script>
+        function showDisclaimer() {
+            var disclaimer = "免责声明：本软件用于学习机房常用软件的运行机制和原理，禁止用于任何非法用途，请谨慎在他人及公共设备上使用。本软件含有危险功能，操作不当可能导致计算机数据丢失、软件损坏甚至硬件损坏等后果，使用本软件造成的一切后果由用户自行承担！";
+            var agree = confirm(disclaimer + "\n\n我已了解以上风险并愿意承担使用软件造成的一切后果");
+            if (agree) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    </script>
+</body>
+</html>
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            width: 60%;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+        .introduction {
+            color: #666;
+            line-height: 1.6;
+            margin-bottom: 30px;
+        }
+        .download-section {
+            margin-top: 30px;
+        }
+        .download-link {
+            display: block;
+            padding: 25px; 
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 5px;
+            margin-bottom: 30px; 
+            transition: background-color 0.3s;
+        }
+        .download-link:hover {
+            background-color: #0056b3;
+        }
+        .logo {
+            width: 100px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
         }
         .back-to-home {
             display: block;
@@ -81,9 +181,10 @@
         </div>
         <div class="download-section">
             <a href="/xcueusfhf.exe" class="download-link">下载最新版本</a>
+            <a href="/反控极域.exe" class="download-link">反控极域</a>
             <a href="/fdskjfd.exe" class="download-link">小体积脚本(可调用)</a>
         </div>
-        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a> <!-- 添加回到主页的链接 -->
+        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a> 
     </div>
 </body>
 </html>
