--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>破解电子教室软件下载</title>
-    <link rel="shortcut icon" href="windows1.gif" type="image/gif">
-    <style>
-        body {<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <title>破解电子教室软件下载</title>
+    <title>电子教室软件下载</title>
     <link rel="shortcut icon" href="windows1.gif" type="image/gif">
     <style>
         body {
@@ -23,11 +16,12 @@
             height: 100vh;
         }
         .container {
-            width: 60%;
+            width: 80%;
+            max-width: 1200px;
             background-color: #fff;
             padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         h1 {
             text-align: center;
@@ -39,22 +33,34 @@
             line-height: 1.6;
             margin-bottom: 30px;
         }
-        .download-section {
+        .file-list {
             margin-top: 30px;
+            background-color: #e0f7fa; /* 更鲜艳的背景色 */
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* 更深的阴影 */
+            border: 2px solid #00bcd4; /* 蓝色边框 */
+        }
+        .file-item {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            border-bottom: 2px solid #b2ebf2; /* 更粗的分隔线 */
+        }
+        .file-item:last-child {
+            border-bottom: none;
+        }
+        .file-name {
+            font-weight: bold;
+            color: #00796b; /* 绿色字体 */
         }
         .download-link {
-            display: block;
-            padding: 25px;
-            background-color: #007bff;
-            color: white;
+            color: #ff5722; /* 橙色字体 */
             text-decoration: none;
-            text-align: center;
-            border-radius: 5px;
-            margin-bottom: 30px;
-            transition: background-color 0.3s;
+            transition: color 0.3s;
         }
         .download-link:hover {
-            background-color: #0056b3;
+            color: #e64a19; /* 深橙色字体 */
         }
         .logo {
             width: 100px;
@@ -75,116 +81,44 @@
         }
         .back-to-home:hover {
             background-color: #5a6268;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            color: #999;
+            font-size: 12px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <img src="windows1.gif" alt="网页logo" class="logo">
-        <h1>破解电子教室软件下载</h1>
+        <h1>电子教室软件下载</h1>
         <div class="introduction">
             <p>欢迎来到我们的下载站，这里提供多种电子教室软件的破解版本，包括老版本和新版本的适配软件，以及小体积脚本和思路合集。请根据您的需求选择合适的下载链接。</p>
             <p>请注意，使用破解软件可能违反软件的版权协议，并可能带来安全风险。我们不鼓励或支持任何非法行为，提供的资源仅供学习和研究之用，请在遵守当地法律法规的前提下使用。</p>
         </div>
-        <div class="download-section">
-            <a href="#" id="download-link-1" class="download-link" onclick="showDisclaimer()">下载最新版本</a>
-            <a href="#" id="download-link-2" class="download-link" onclick="showDisclaimer()">小体积脚本(可调用)</a>
+        <div class="file-list">
+            <div class="file-item">
+                <span class="file-name">xcueusfhf.exe(ko小助手最新版本)</span>
+                <span class="file-date">2023-01-30 13:56:40</span>
+                <a href="/xcueusfhf.exe" class="download-link">下载</a>
+            </div>
+            <div class="file-item">
+                <span class="file-name">反控极域.exe(配合IP扫描器使用)</span>
+                <span class="file-date">2023-01-30 14:23:50</span>
+                <a href="/反控极域.exe" class="download-link">下载</a>
+            </div>
+            <div class="file-item">
+                <span class="file-name">fdskjfd.exe(小体积脚本,可调用)</span>
+                <span class="file-date">2023-01-30 21:31:14</span>
+                <a href="/fdskjfd.exe" class="download-link">下载</a>
+            </div>
         </div>
         <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a>
-    </div>
-
-    <script>
-        function showDisclaimer() {
-            var disclaimer = "免责声明：本软件用于学习机房常用软件的运行机制和原理，禁止用于任何非法用途，请谨慎在他人及公共设备上使用。本软件含有危险功能，操作不当可能导致计算机数据丢失、软件损坏甚至硬件损坏等后果，使用本软件造成的一切后果由用户自行承担！";
-            var agree = confirm(disclaimer + "\n\n我已了解以上风险并愿意承担使用软件造成的一切后果");
-            if (agree) {
-                return true;
-            } else {
-                return false;
-            }
-        }
-    </script>
-</body>
-</html>
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            width: 60%;
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-        .introduction {
-            color: #666;
-            line-height: 1.6;
-            margin-bottom: 30px;
-        }
-        .download-section {
-            margin-top: 30px;
-        }
-        .download-link {
-            display: block;
-            padding: 25px; 
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            border-radius: 5px;
-            margin-bottom: 30px; 
-            transition: background-color 0.3s;
-        }
-        .download-link:hover {
-            background-color: #0056b3;
-        }
-        .logo {
-            width: 100px;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-        .back-to-home {
-            display: block;
-            padding: 15px;
-            background-color: #6c757d;
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            border-radius: 5px;
-            margin-top: 30px;
-            transition: background-color 0.3s;
-        }
-        .back-to-home:hover {
-            background-color: #5a6268;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <img src="windows1.gif" alt="网页logo" class="logo"> <!-- 添加网页logo -->
-        <h1>破解电子教室软件下载</h1>
-        <div class="introduction">
-            <p>欢迎来到我们的下载站，这里提供多种电子教室软件的破解版本，包括老版本和新版本的适配软件，以及小体积脚本和思路合集。请根据您的需求选择合适的下载链接。</p>
-            <p>请注意，使用破解软件可能违反软件的版权协议，并可能带来安全风险。我们不鼓励或支持任何非法行为，提供的资源仅供学习和研究之用，请在遵守当地法律法规的前提下使用。</p>
+        <div class="footer">
+            <p>版权所有 © 2024 电子教室软件下载站</p>
         </div>
-        <div class="download-section">
-            <a href="/xcueusfhf.exe" class="download-link">下载最新版本</a>
-            <a href="/反控极域.exe" class="download-link">反控极域</a>
-            <a href="/fdskjfd.exe" class="download-link">小体积脚本(可调用)</a>
-        </div>
-        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a> 
     </div>
 </body>
 </html>
