--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
             font-weight: bold;
             color: #00796b; /* 绿色字体 */
         }
+        .file-date {
+            margin-left: 20px;
+        }
+        .file-md5 {
+            font-size: 14px;
+            color: #333;
+            margin-left: 20px;
+        }
         .download-link {
             color: #ff5722; /* 橙色字体 */
             text-decoration: none;
@@ -102,20 +110,23 @@
             <div class="file-item">
                 <span class="file-name">xcueusfhf.exe(ko小助手最新版本)</span>
                 <span class="file-date">2025-01-17 00:00:00</span>
+                <span class="file-md5">MD5值：f435da26e472975768c7e0a1feeaa0a5</span>
                 <a href="/xcueusfhf.exe" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name">极域反控.exe(配合IP扫描器使用)</span>
                 <span class="file-date">2025-01-17 00:00:00</span>
+                <span class="file-md5">MD5值：671537f97b70147de33e8c04c8a07576</span>
                 <a href="/极域反控.exe" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name">fdskjfd.exe(小体积脚本,可调用)</span>
                 <span class="file-date">2025-01-17 00:00:00</span>
+                <span class="file-md5">MD5值：68a11676c650f05699ed8d4dd7336a52</span>
                 <a href="/fdskjfd.exe" class="download-link">下载</a>
             </div>
         </div>
-        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a>
+        <a href="https://example.com" class="back-to-home">回到主页</a>
         <div class="footer">
             <p>版权所有 © 2025 电子教室软件下载站</p>
         </div>
