--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <span class="file-name">极域反控.exe(配合IP扫描器使用)</span>
                 <span class="file-date">2025-01-17 00:00:00</span>
                 <span class="file-md5">MD5值：671537f97b70147de33e8c04c8a07576</span>
-                <a href="/极域反控.exe" class="download-link">下载</a>
+                <a href="/极域反控.html" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name">fdskjfd.exe(小体积脚本,可调用)</span>
