--- a/极域反控.html
+++ b/极域反控.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="windows1.gif" type="image/gif">
     <title>极域反控下架声明</title>
     <style>
         body {
