--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <span class="file-name">aeufuhsco.exe(ko小助手最新版本)</span>
                 <span class="file-date">2025-01-21 00:25:00</span>
                 <span class="file-md5">MD5值：44156d02b565e021736c193773e1743b</span>
-                <a href="/xcueusfhf.exe" class="download-link">下载</a>
+                <a href="/aeufuhsco.exe" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name"><span class="deleted">极域反控.exe(配合IP扫描器使用)</span></span>
