--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,6 +23,8 @@
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out;
+            position: relative;
+            z-index: 1;
         }
         .container:hover {
             transform: scale(1.02);
@@ -125,6 +126,7 @@
     </style>
 </head>
 <body>
+    <iframe src="https://api.r10086.com/PPT/PPT.php?PPT=%E5%8E%9F%E7%A5%9E" style="position: fixed; top: 0; left: 0; z-index: -1; width: 100%; height: 100%; border: none;"></iframe>
     <div class="container">
         <img src="windows1.gif" alt="网页logo" class="logo">
         <h1>电子教室软件下载</h1>
