--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,7 +19,7 @@
         .container {
             width: 80%;
             max-width: 1200px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.7); /* 设置背景颜色为白色并添加透明度 */
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
