--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         </div>
         <div class="file-list">
             <div class="file-item">
-                <span class="file-name">aeufuhsco.exe(ko小助手最新版本)</span>
-                <span class="file-date">2025-01-21 00:25:00</span>
-                <span class="file-md5">MD5值：44156d02b565e021736c193773e1743b</span>
-                <a href="/aeufuhsco.exe" class="download-link">下载</a>
+                <span class="file-name">ishfuien.exe(ko小助手最新版本)</span>
+                <span class="file-date">2025-01-23 20:22:00</span>
+                <span class="file-md5">MD5值：f3f64b97385b7b21016ecd88591606d1</span>
+                <a href="/ishfuien.exe" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name"><span class="deleted">极域反控.exe(配合IP扫描器使用)</span></span>
