--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         </div>
         <div class="file-list">
             <div class="file-item">
-                <span class="file-name">sfdoif9ciosOdg.exe(ko小助手最新版本)</span>
-                <span class="file-date">2025-01-24 19:11:00</span>
-                <span class="file-md5">MD5值：d67ce7ef7c9b38aa5a337640027297ec</span>
-                <a href="/sfdoif9ciosOdg.exe" class="download-link">下载</a>
+                <span class="file-name">ufHd6soaif.exe(ko小助手最新版本)</span>
+                <span class="file-date">2025-01-24 23:12:00</span>
+                <span class="file-md5">MD5值：6033acf1784fd7d84dba22d343909c8d</span>
+                <a href="/ufHd6soaif.exe" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name"><span class="deleted">极域反控.exe(配合IP扫描器使用)</span></span>
