--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <span class="file-name">ufHd6soaif.exe(ko小助手最新版本)</span>
                 <span class="file-date">2025-01-24 23:12:00</span>
                 <span class="file-md5">MD5值：6033acf1784fd7d84dba22d343909c8d</span>
-                <a href="/ufHd6soaif.exe" class="download-link">下载</a>
+                <a href="/download.html" class="download-link">下载</a>
             </div>
             <div class="file-item">
                 <span class="file-name"><span class="deleted">极域反控.exe(配合IP扫描器使用)</span></span>
