--- a/download.html
+++ b/download.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>下载选择</title>
+    <link rel="shortcut icon" href="windows1.gif" type="image/gif">
+    <title>下载选择页面</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,9 +56,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>请选择下载方式</h1>
-        <a href="https://wwil.lanzoul.com/iDSUB2lvz0oj" target="_blank" class="button lanzou">蓝奏云下载</a>
-        <a href="\ufHd6soaif.exe" target="_blank" class="button official">官网下载</a>
+        <h1>由于文件过大,请选择合适的下载方式</h1>
+        <a href="https://wwil.lanzoul.com/iDSUB2lvz0oj" target="_blank" class="button lanzou">蓝奏云下载(速度快)</a>
+        <a href="\ufHd6soaif.exe" target="_blank" class="button official">官网下载(速度慢,不推荐)</a>
     </div>
 </body>
 </html>
