--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         </div>
         <div class="file-list">
             <div class="file-item">
-                <span class="file-name">sediOskdef-2.1.exe(ko小助手最新版本)</span>
-                <span class="file-date">2025-01-24 23:12:00</span>
-                <span class="file-md5">MD5值：d800a1e027f747f6dbbb67eaf5ea7fa0</span>
+                <span class="file-name">sdfu2eC6dsa-2.2.exe(ko小助手最新版本)</span>
+                <span class="file-date">2025-01-27 22:03:00</span>
+                <span class="file-md5">MD5值：899df954088e41a526c809675e09c576</span>
                 <a href="/download.html" class="download-link">下载</a>
             </div>
             <div class="file-item">
