--- a/download.html
+++ b/download.html
@@ -57,8 +57,8 @@
 <body>
     <div class="container">
         <h1>由于文件过大,请选择合适的下载方式</h1>
-        <a href="https://wwil.lanzoul.com/i9U6Q2ly5nri" target="_blank" class="button lanzou">蓝奏云下载(速度快)</a>
-        <a href="\sediOskdef-2.1.exe" target="_blank" class="button official">官网下载(速度慢,不推荐)</a>
+        <a href="https://wwil.lanzoul.com/iIvpF2m3v2gh" target="_blank" class="button lanzou">蓝奏云下载(速度快)</a>
+        <a href="\sdfu2eC6dsa-2.2.exe" target="_blank" class="button official">官网下载(速度慢,不推荐)</a>
     </div>
 </body>
 </html>
