--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a href="/fdskjfd.exe" class="download-link">下载</a>
             </div>
         </div>
-        <a href="https://pjdzjs.us.kg/" class="back-to-home">回到主页</a>
+        <a href="https://koxzs.云散皆星河.cn/" class="back-to-home">回到主页</a>
         <div class="footer">
             <p>版权所有 © 2025 电子教室软件下载站</p>
         </div>
